# HF_DFS

./: .gitignore  CMakeLists.txt  README.md  build.sh  fdfs_upload.c  fdfs_upload.h  main.c  push.sh  redisDemo.c
cloud-disk/: nginx.conf  redis.sh
cloud-disk/bin_cgi/: login  md5  myfiles  sharefiles
cloud-disk/common/: deal_mysql.c  des.c
cloud-disk/conf/: client.conf  redis.conf  storage.conf
cloud-disk/redis/: dump.rdb
cloud-disk/src_cgi/: upload_cgi.c
fastDFS/: README.md  config
fastDFS/fastdfs-5.10/client/: Makefile  fdfs_append_file  fdfs_appender_test  fdfs_appender_test1  fdfs_crc32  fdfs_delete_file  fdfs_download_file  fdfs_file_info  fdfs_link_library.sh  fdfs_monitor  fdfs_test  fdfs_test1  fdfs_upload_appender  fdfs_upload_file
fastDFS/fastdfs-5.10/storage/: Makefile  fdfs_storaged
fastDFS/fastdfs-5.10/tracker/: Makefile  fdfs_trackerd
fastDFS/libfastcommon-master/src/: Makefile  _os_define.h
fcgi/: Makefile  config.status  fcgi_config.h  libtool  stamp-h1
fcgi/cgi-fcgi/: Makefile  cgi-fcgi
fcgi/cgi-fcgi/.deps/: cgi-fcgi.Po
fcgi/cgi-fcgi/.libs/: cgi-fcgi
fcgi/examples/: Makefile  app  authorizer  echo  echo-cpp  echo-x  log-dump  size  threaded
fcgi/examples/.deps/: authorizer.Po  echo-cpp.Po  echo-x.Po  echo.Po  log-dump.Po  size.Po  threaded-threaded.Po
fcgi/examples/.libs/: authorizer  echo  echo-cpp  echo-x  log-dump  size  threaded
fcgi/include/: Makefile
fcgi/libfcgi/: Makefile
fcgi/libfcgi/.deps/: fcgio.Plo  libfcgi_la-fcgi_stdio.Plo  libfcgi_la-fcgiapp.Plo  libfcgi_la-os_unix.Plo
fcgi/libfcgi/.libs/: libfcgi++.so.0.0.0  libfcgi++.so.0.0.0T  libfcgi.so.0.0.0
hf_redis/: dump.rdb
nginx/: README.md  ln_nginx
nginx/nginx-1.10.1/objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h  ngx_modules.c
nginx/openssl-1.0.1t/: libcrypto.pc  libssl.pc  openssl.pc
nginx/openssl-1.0.1t/apps/: openssl
nginx/openssl-1.0.1t/crypto/: buildinf.h
nginx/openssl-1.0.1t/test/: bftest  bntest  casttest  clienthellotest  constant_time_test  destest  dhtest  dsatest  dummytest  ecdhtest  ecdsatest  ectest  enginetest  evp_extra_test  evp_test  exptest  hmactest  ideatest  igetest  jpaketest  md2test  md4test  md5test  mdc2test  randtest  rc2test  rc4test  rc5test  rmdtest  rsa_test  sha1test  sha256t  sha512t  shatest  srptest  ssltest  verify_extra_test  wp_test
nginx/pcre-8.40/: Makefile  config.h  config.status  libpcre.pc  libpcre16.pc  libpcre32.pc  libpcrecpp.pc  libpcreposix.pc  libtool  pcre-config
nginx/pcre-8.40/.deps/: libpcre_la-pcre_byte_order.Plo  libpcre_la-pcre_chartables.Plo  libpcre_la-pcre_compile.Plo  libpcre_la-pcre_config.Plo  libpcre_la-pcre_dfa_exec.Plo  libpcre_la-pcre_exec.Plo  libpcre_la-pcre_fullinfo.Plo  libpcre_la-pcre_get.Plo  libpcre_la-pcre_globals.Plo  libpcre_la-pcre_jit_compile.Plo  libpcre_la-pcre_maketables.Plo  libpcre_la-pcre_newline.Plo  libpcre_la-pcre_ord2utf8.Plo  libpcre_la-pcre_refcount.Plo  libpcre_la-pcre_string_utils.Plo  libpcre_la-pcre_study.Plo  libpcre_la-pcre_tables.Plo  (+4 more)
redis-4.0.8/: redis.conf
resource/: HFDFS.sql
spawnfcgi/: Makefile  config.h  config.status
spawnfcgi/doc/: Makefile
spawnfcgi/src/: Makefile  spawn-fcgi
src/: CMakeLists.txt  Makefile  README  README.md  build.sh  fcgi.sh  nginx.conf
src/bin_cgi/: dealfile  dealsharefile  login  md5  myfiles  register  sharefiles  upload
src/cgi/: dealfile_cgi.c  dealsharefile_cgi.c  login_cgi.c  md5_cgi.c  myfiles_cgi.c  reg_cgi.c  register_cgi.c  sharefiles_cgi.c  upload_cgi.c
src/common/: base64.c  cfg.c  config.c  deal_mysql.c  des.c  make_log.c  md5.c  util_cgi.c
src/conf/: cfg.json  config.json  nginx.conf  redis.conf  tracker.conf
src/demo/: myredis.c
src/include/: base64.h  cfg.h  config.h  deal_mysql.h  des.h  make_log.h  redis_keys.h  redis_op.h  util_cgi.h
src/redis/: dump.rdb
src/sh/: fastdfs.sh  fcgi.sh  nginx.sh  redis.sh  start.sh
src/src_cgi/: .reg_cgi.c.swp  dealfile_cgi.c  dealsharefile_cgi.c  login_cgi.c  md5_cgi.c  myfiles_cgi.c  reg_cgi.c  register_cgi.c  sharefiles_cgi.c  upload_cgi.c
(+12 files in other folders)
